Message goes here

--- a/Templates/About_final.html
+++ b/Templates/About_final.html
@@ -26,10 +26,10 @@
         <div class="jumbotron">
             <div class="container">
                 <h1>{{ greeting }}</h1>
-                <p>Hello Mattan! (or whoever is grading the assignment). Brace yourself for the most amazing gif searching page ever!</p>
+                <p>Welcome to the about page!</p>
                 <form action="/results" class="form-inline">
                     <div class="form-group">
-                        <input type="text" name="gif"
+                        <input type="text" name="stock"
                         placeholder="Enter a gif" class="form-control">
                     </div>
                     <input type="submit" class="btn btn-primary">
