Message goes here

--- a/Templates/search_panel.html
+++ b/Templates/search_panel.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <h1>Get ready for some GIFs!</h1>
                 <p>Hello Mattan! (or whoever is grading the assignment). Brace yourself for the most amazing gif searching page ever! Search for GIFs to your heart's delight.</p>
-               <!-- <form action="/results" class="form-inline">
+                    <form action="/results" class="form-inline">
                     <div class="form-group">
                         <input type="text" name="gif"
                         placeholder="Enter a gif" class="form-control">
@@ -35,26 +35,9 @@
                     <input type="submit" class="btn btn-primary">
                 </form>
             </div>
-        </div> -->
- 
-                 <a href="/search" class="btn btn-primary btn-lg" data-toggle="collapse">Start</a>
-            </div>
         </div>
-
-     <div id="searchPanel" class="container collapse">
-            
-        <form action="/results">
-  <div class="form-group">
-    <label for="inputKeyword">GIF Search Keyword</label>
-    <input name="keyword" type="text" class="form-control" id="inputKeyword" aria-describedby="keywordHelp" placeholder="Give us a keyword for your GIFs">
-    <small id="keywordHelp" class="form-text text-muted">The weirder, the better!</small>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-</div>
-        <div class="container">
-
-
+ 
+        
             <!-- Columns -->
             <div class="row">
                 <div class="col-md-4">
