--- a/Templates/results.html
+++ b/Templates/results.html
@@ -10,7 +10,7 @@
         <!-- Navigation Bar -->
         <nav class="navbar navbar-static-top navbar-dark bg-inverse">
             <div class="container">
-                <a class="navbar-brand" href="/">Python Project</a>
+                <a class="navbar-brand" href="/">G.I.F.</a>
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
@@ -26,15 +26,7 @@
 
         <div class="jumbotron">
             <div class="container">
-                <h1>{{ greeting }}</h1>
-                <p>Satisfied? Or want to search for something else?.</p>
-                <form action="/results" class="form-inline">
-                    <div class="form-group">
-                        <input type="text" name="gif"
-                        placeholder="Enter the gif you want to see" class="form-control">
-                    </div>
-                    <input type="submit" class="btn btn-primary">
-                </form>
+                <h1>Here are your gifs</h1>
                 <a href="/">Back to search</a>
             </div>
         </div>
@@ -42,17 +34,19 @@
         <!-- GIF Search Results -->
         <div class="container">
             <div class="card-columns">
-            
-                {% for result in results %}
-                     {{ result.media_url }}
-                     {{ result.url }}
-                     <img src= {{ result.url }}>
+                <div class="card">
+
+                <!-- this is the tricky part. the first href has to be a link and the src the gif itsel. As far as I understood we have to loop this argument. Not sure if this is the right way to pass the url and gifs, though -->
+
+                 {% for result in results %}
+
+                  <a href= {{ url }} target="_blank">
+                    <img class="card-img-top" src= {{ media }} style="width:100%; height:auto;">
+                  </a>
+                </div>
+                          
                 {% endfor %}
-            
-            </div>
-        </div>
-            
-            
+
             </div>
         </div>
 
